# downspout

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  install.md  meter.md  plan.md  release.md  requirements.md
include/downspout/: meter.hpp
plugins/bassgen/: CMakeLists.txt  README.md
plugins/bassgen/docs/: audit.md  extraction-plan.md  porting.md
plugins/bassgen/include/: bassgen_core_types.hpp  bassgen_engine.hpp  bassgen_pattern.hpp  bassgen_rng.hpp  bassgen_serialization.hpp  bassgen_state.hpp  bassgen_transport.hpp  bassgen_variation.hpp
plugins/bassgen/src/: bassgen_engine.cpp  bassgen_pattern.cpp  bassgen_serialization.cpp  bassgen_state.cpp  bassgen_transport.cpp  bassgen_variation.cpp
plugins/bassgen/tests/: bassgen_core_tests.cpp
plugins/cadence/: CMakeLists.txt  README.md
plugins/cadence/docs/: audit.md  extraction-plan.md  porting.md
plugins/cadence/include/: cadence_comping.hpp  cadence_core_types.hpp  cadence_engine.hpp  cadence_harmony.hpp  cadence_rng.hpp  cadence_serialization.hpp  cadence_transport.hpp  cadence_variation.hpp
plugins/cadence/src/: cadence_comping.cpp  cadence_engine.cpp  cadence_harmony.cpp  cadence_serialization.cpp  cadence_transport.cpp  cadence_variation.cpp
plugins/cadence/tests/: cadence_core_tests.cpp
plugins/drumgen/: CMakeLists.txt  README.md
plugins/drumgen/docs/: audit.md  extraction-plan.md  porting.md
plugins/drumgen/include/: drumgen_core_types.hpp  drumgen_engine.hpp  drumgen_pattern.hpp  drumgen_rng.hpp  drumgen_serialization.hpp  drumgen_state.hpp  drumgen_transport.hpp  drumgen_variation.hpp
plugins/drumgen/src/: drumgen_engine.cpp  drumgen_pattern.cpp  drumgen_serialization.cpp  drumgen_state.cpp  drumgen_transport.cpp  drumgen_variation.cpp
plugins/drumgen/tests/: drumgen_core_tests.cpp
plugins/e-mix/: CMakeLists.txt  README.md
plugins/e-mix/docs/: audit.md  extraction-plan.md  porting.md
plugins/e-mix/include/: e_mix_core_types.hpp  e_mix_engine.hpp  e_mix_serialization.hpp
plugins/e-mix/src/: e_mix_engine.cpp  e_mix_serialization.cpp
plugins/e-mix/tests/: e_mix_core_tests.cpp
plugins/gremlin/: CMakeLists.txt  README.md
plugins/gremlin-driver/: CMakeLists.txt  README.md
plugins/gremlin-driver/docs/: audit.md  extraction-plan.md  porting.md
plugins/gremlin-driver/include/: GremlinDriverEngine.hpp  gremlin_driver_dpf_shared.hpp  gremlin_driver_params.hpp  gremlin_driver_processor.hpp
plugins/gremlin-driver/src/: gremlin_driver_processor.cpp
plugins/ground/: CMakeLists.txt  README.md
plugins/p-mix/: CMakeLists.txt  README.md
plugins/p-mix/docs/: audit.md  extraction-plan.md  porting.md
plugins/p-mix/include/: p_mix_core_types.hpp  p_mix_engine.hpp  p_mix_serialization.hpp
plugins/p-mix/src/: p_mix_engine.cpp  p_mix_serialization.cpp
plugins/p-mix/src/dpf/: DistrhoPluginInfo.h  PMixPlugin.cpp  PMixUI.cpp
plugins/p-mix/tests/: p_mix_core_tests.cpp
plugins/rift/: CMakeLists.txt  README.md
plugins/rift/docs/: design.md  (+1 more)
scripts/: package-release.sh
(+55 files in other folders)
